@@ -9611,6 +9611,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -9754,6 +9762,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -9892,6 +9908,14 @@ name|NullPointerException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -10043,6 +10067,14 @@ name|NullPointerException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -10180,6 +10212,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -10328,6 +10368,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
@@ -10516,6 +10564,14 @@ name|IllegalArgumentException
 name|expected
 parameter_list|)
 block|{}
+name|assertNull
+argument_list|(
+name|iw
+operator|.
+name|getTragicException
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|iw
 operator|.
 name|close
